# head-dictionary

./: Cargo.toml  README.md
src/: lib.rs  lib_test.rs
